--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,22 @@
+
 {
   "name": "PGOasis",
   "short_name": "PGOasis",
   "description": "The Modern OS for Your PG",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#FFFFFF",
+  "theme_color": "#FFFFFF",
   "icons": [
     {
-      "src": "/icons/icon-192x192.svg",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.svg",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "start_url": "/dashboard",
-  "display": "standalone",
-  "orientation": "portrait"
+  ]
 }
