--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
   "name": "PGOasis",
   "short_name": "PGOasis",
-  "description": "PG Management and Tenant Marketplace",
+  "description": "The Modern OS for Your PG",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#FFFFFF",
+  "theme_color": "#FFFFFF",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "https://placehold.co/192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "https://placehold.co/512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
