--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,24 @@
 {
   "name": "PGOasis",
   "short_name": "PGOasis",
-  "description": "The Modern OS for Your PG",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#FFFFFF",
-  "theme_color": "#FFFFFF",
+  "description": "PG Management and Tenant Marketplace",
   "icons": [
     {
-      "src": "https://placehold.co/192x192.png",
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
       "type": "image/png",
-      "sizes": "192x192"
+      "purpose": "any maskable"
     },
     {
-      "src": "https://placehold.co/512x512.png",
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "theme_color": "#E2F3FD",
+  "background_color": "#E2F3FD",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
