--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
+    "build:sw": "node scripts/build-sw.js",
+    "build": "npm run build:sw && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
