--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "RoomBox",
-  "short_name": "RoomBox",
+  "name": "RentVastu",
+  "short_name": "RentVastu",
   "icons": [
     {
       "src": "icons/icon-48x48.png",
