--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "rentvastu",
   "version": "0.0.1",
@@ -48,6 +47,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "genkit": "^1.13.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.475.0",
