--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@reactour/tour": "^3.7.0",
+    "@reactour/tour": "^3.8.0",
     "@reduxjs/toolkit": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -64,6 +64,8 @@
     "react-redux": "^9.1.2",
     "react-to-print": "^2.15.1",
     "recharts": "^2.15.1",
+    "razorpay": "^2.9.4",
+    "shortid": "^2.2.16",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -73,6 +75,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/shortid": "^0.0.32",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
