--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "shortid": "^2.2.16",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -78,6 +79,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/shortid": "^0.0.32",
+    "@types/uuid": "^9.0.8",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
