--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "firebase-admin": "^13.4.0",
     "genkit": "^1.13.0",
     "immer": "^10.1.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
