--- a/src/package.json
+++ b/src/package.json
@@ -54,7 +54,9 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "genkit": "^1.13.0",
+    "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
