--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "genkit": "^1.13.0",
     "immer": "^10.1.1",
     "jspdf": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
@@ -81,6 +82,7 @@
     "@types/react-dom": "^18",
     "@types/shortid": "^0.0.32",
     "@types/uuid": "^9.0.8",
+    "@types/jsonwebtoken": "^9.0.6",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
