--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "rentsutra",
   "version": "0.0.1",
@@ -46,22 +45,24 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "cloudinary": "^2.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "genkit": "^1.13.0",
+    "googleapis": "^160.0.0",
     "immer": "^10.1.1",
-    "jspdf": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -69,7 +70,6 @@
     "react-redux": "^9.1.2",
     "react-to-print": "^2.15.1",
     "recharts": "^2.15.1",
-    "razorpay": "^2.9.4",
     "shortid": "^2.2.16",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
