--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run build:sw && next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
@@ -84,6 +85,7 @@
     "@types/react-dom": "^18",
     "@types/shortid": "^0.0.32",
     "@types/uuid": "^9.0.8",
+    "cypress": "^13.13.1",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
