--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.1.2",
     "react-to-print": "^2.15.1",
+    "react-use": "^17.5.0",
     "recharts": "^2.15.1",
     "shortid": "^2.2.16",
     "tailwind-merge": "^3.0.1",
